--- a/breaking-bad-characters/app/build.gradle
+++ b/breaking-bad-characters/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    api project(":domain")
+    api project(":data")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
