--- a/breaking-bad-characters/app/build.gradle
+++ b/breaking-bad-characters/app/build.gradle
@@ -33,6 +33,13 @@ android {
     }
 }
 
+ext {
+    navigationVersion = '2.3.4'
+    androidxVersion = '1.0.0'
+    constraintLayoutVersion = '2.0.4'
+    ktxVersion = '1.3.0'
+}
+
 dependencies {
     api project(":domain")
     api project(":data")
@@ -52,6 +59,17 @@ dependencies {
     api "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+
+    implementation "androidx.appcompat:appcompat:$androidxVersion"
+    implementation "androidx.cardview:cardview:$androidxVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.recyclerview:recyclerview:$androidxVersion"
+    implementation "androidx.core:core-ktx:$ktxVersion"
 }
