--- a/breaking-bad-characters/build.gradle
+++ b/breaking-bad-characters/build.gradle
@@ -3,14 +3,15 @@ buildscript {
     ext {
         kotlin_version = '1.4.31'
         coroutines_version = '1.4.2'
-        dagger_version = '2.28.1'
+        dagger_version = '2.30.1'
+        retrofitVersion = '2.9.0'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
