--- a/breaking-bad-characters/data/build.gradle
+++ b/breaking-bad-characters/data/build.gradle
@@ -10,6 +10,7 @@ java {
 }
 
 dependencies {
+    api project(":common")
     api project(":domain")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
