--- a/breaking-bad-characters/data/build.gradle
+++ b/breaking-bad-characters/data/build.gradle
@@ -23,4 +23,14 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
+    testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.8.1"
+    api "com.squareup.okhttp3:okhttp:4.9.0"
+}
+
+test {
+    useJUnitPlatform()
 }
