--- a/breaking-bad-characters/data/build.gradle
+++ b/breaking-bad-characters/data/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "org.mockito:mockito-junit-jupiter:2.28.2"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.8.1"
     api "com.squareup.okhttp3:okhttp:4.9.0"
